# csv2json-mcp

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
csv2json_mcp/: __init__.py  converter.py  server.py
example/: example.csv  example_client.py  example_output.json
