[project]
name = "csv2json-mcp"
version = "0.1.1"
description = "一个基于 FastMCP 的 CSV 到 JSON 转换 MCP (Model Context Protocol) 服务器，提供高效的 CSV 数据转换服务"
authors = [
    {name = "zhangjy07", email = "893928676@qq.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.8.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
csv2json-mcp = "csv2json_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 使用自动包发现
packages = {find = {where = ["."], include = ["csv2json_mcp*"]}}

# 包含额外的数据文件
package-data = {"*" = ["README.md"]}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF"]
ignore = ["E501", "W503", "C901"]
line-length = 88
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]